--- a/Chapter1.ipynb
+++ b/Chapter1.ipynb
@@ -38,59 +38,7 @@
    "id": "4d478d5a",
    "metadata": {},
    "source": [
-    "### **1.1.1. Anaconda and Jupyter Notebook**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c256ede9",
-   "metadata": {},
-   "source": [
-    "#### ***1.1.1.1. Installation***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7f104a95",
-   "metadata": {},
-   "source": [
-    "You can download Anaconda from [Anaconda's website](https://www.anaconda.com/products/distribution) and follow the installation instructions for your operating system.\n",
-    "\n",
-    "Once Anaconda is installed, open Anaconda Navigator or use the Anaconda command prompt to manage your Python environments."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "04290f8e",
-   "metadata": {},
-   "source": [
-    "#### ***1.1.1.2. Python Development Environment***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "03a7fd39",
-   "metadata": {},
-   "source": [
-    "Anaconda will make a default python environment for you. However, you can create your own environments if needed.\n",
-    "\n",
-    "In your Anaconda Navigator or Anaconda command prompt, you can create a new python environment. Here's an example of how to create an environment named \"chem-env\" with python 3.11:\n",
-    "\n",
-    "`conda create --name chem-env`\n",
-    "\n",
-    "You can replace \"chem-env\" with your preferred environment name and specify a different Python version if needed.\n",
-    "\n",
-    "To activate your newly created environment, use the following command:\n",
-    "\n",
-    "`conda activate chem-env`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a7f9298",
-   "metadata": {},
-   "source": [
-    "#### ***1.1.1.3. Jupyter Notebook***"
+    "### **1.1.1. Jupyter Notebook**"
    ]
   },
   {
@@ -1108,26 +1056,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7949a1a9-2685-4a18-948f-42ea30892665",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "4\n",
-      "9\n",
-      "16\n",
-      "25\n",
-      "36\n",
-      "49\n",
-      "64\n",
-      "81\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for x in range(1, 10):\n",
     "    print(x ** 2)"
