--- a/Chapter6_part1.ipynb
+++ b/Chapter6_part1.ipynb
@@ -261,7 +261,7 @@
    "id": "b2fbdd9f-f8f7-46e1-9852-e29635c0b850",
    "metadata": {},
    "source": [
-    "### **6.2.2. Encoding Categorical Data***"
+    "### **6.2.2. Encoding Categorical Data**"
    ]
   },
   {
